refactor: Java 16+ 기존 .collect(Collectos.toList)) => .toList() 간결화